--- a/src/styles/elements/_a.elements.scss
+++ b/src/styles/elements/_a.elements.scss
@@ -3,5 +3,6 @@
 //*********************************************************************************
 a {
     color: $color--white;
+    font-family: Got;
     text-decoration: none;
 }
