--- a/src/components/shared/mainMenu.scss
+++ b/src/components/shared/mainMenu.scss
@@ -9,11 +9,13 @@
 
     &__menu {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         width: 100%;
     }
 
-    &__item {        
+    &__item {     
         list-style: none;
+        text-align: center;
+        width: 250px;
     }
 }
