--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,9 +1,25 @@
+@import '../styles/settings/fonts.settings';
+
 .c-home-container {
     background: url('../imgs/throne-back.png') center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    display: flex;
     height: 100vh;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
     width: 100%;
+
+    &__title {
+        align-self: center;
+        display: flex;
+        font-family: Got;
+        font-size: $title-font-size;
+        text-align: center;
+        width: 60vw;
+    }
 }
