--- a/src/styles/imports/_elements.imports.scss
+++ b/src/styles/imports/_elements.imports.scss
@@ -1,3 +1,4 @@
 @import '../elements/body.elements';
 @import '../elements/a.elements';
 @import '../elements/fonts.elements';
+@import '../elements/padding.objects';
