--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -20,6 +20,7 @@
         display: flex;
         font-family: Got;
         font-size: $title-font-size;
+        font-weight: normal;
         text-align: center;
         width: 60vw;
     }
