--- a/src/styles/imports/_settings.imports.scss
+++ b/src/styles/imports/_settings.imports.scss
@@ -1,3 +1,4 @@
 @import '../settings/colors.settings';
 @import '../settings/fonts.settings';
 @import '../settings/padding.settings';
+@import '../settings/sizes.settings';
