--- a/src/pages/characters.scss
+++ b/src/pages/characters.scss
@@ -21,7 +21,7 @@
             opacity: .8;
             transition: .5s;
 
-            & .c-img-gallery__img-caption {
+            &__img-caption {
                 -webkit-transform: translateY(0);
                 -ms-transform: translateY(0);
                 -o-transform: translateY(0);
