# styled details + scrolbar

--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -3,37 +3,49 @@
 .c-details {
     display: flex;
     flex-flow: row wrap;
-    height: calc(100vh - (#{$header-height} + #{$main-menu-height}));
-    overflow-y: scroll;
+    height: calc(100vh - #{$header-height} - #{$main-menu-height});
+    overflow-y: auto;
     width: 100%;
     font-family: $got-font;
     
-    &__main-img {
-        height: 300px;
-    }
-
-    &__row {
+    &__main-img {        
+        //height: calc(30vh - #{$header-height});
+        height: calc(100% - #{$header-height});
+        object-fit: contain;
         width: 100%;
-        height: calc((100% - #{$header-height + #{$main-menu-height}}) / 2);
     }
 
-    &__col-title {
-        font-size: 18px;
-        font-weight: normal;
-        text-align: center;
+    &__title-row {
+        display: flex;
+        flex-flow: column;
+        height: calc(40vh - #{$header-height});
+    /* justify-content: center; */
+        align-items: center;
+    }
+
+    &__details-row {
+        display: flex;
+        height: calc(60vh - #{$main-menu-height});
+        width: 100%;
     }
 
     &__col {
+        align-items: center;
         display: flex;
         flex-direction: column;
         height: 50vh;        
     }
 
+    &__col-title {
+        font-weight: normal;
+    }
+
     &__items-list {
         font-family: $lato;
         text-align: center;
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: 0;
+        width: 100%;
     }
 
     &__item {
@@ -60,3 +72,11 @@
 //         flex-basis: calc(100% / 6);
 //     }
 // }
+
+.o-simple-bar {
+    height: 100%;
+    width: 100%;
+    .simplebar-scrollbar {
+        background-color: #FFF !important;
+    }
+}
