--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,9 @@
 @import '~normalize.css';
 @import '~bootstrap/scss/bootstrap-grid';
 
+// 5. Objects - Layout Classes
+@import './imports/objects.imports';
+
 //  #elements import
 @import './imports/elements.imports';
 
