--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -52,6 +52,11 @@
         list-style: none;
         font-size: 16px;
         padding: $base-padding 0;
+
+        &--span {
+            font-family: $lato;
+            text-align: center;
+        }
     }
 }
 
